[gd_scene load_steps=6 format=3 uid="uid://dog8ihjv5cf51"]

[ext_resource type="Script" uid="uid://clb1bv4eoo58n" path="res://Scripts/Enemies/beetle.gd" id="1_okpmu"]
[ext_resource type="Texture2D" uid="uid://bb2s3vl4vem4n" path="res://Sprites/Assets/Bettle_Antwons_Enemy.png" id="2_6cg4j"]
[ext_resource type="PackedScene" uid="uid://yxd8b6lomygi" path="res://Scenes/Enemies/hitbox.tscn" id="3_t72gn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4y2ou"]
size = Vector2(63, 104)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ipb8m"]
size = Vector2(138, 62)

[node name="Beetle" type="CharacterBody2D"]
script = ExtResource("1_okpmu")

[node name="Node2D" type="Node2D" parent="."]

[node name="Neutral" type="Sprite2D" parent="Node2D"]
position = Vector2(-0.5, -4.76837e-07)
scale = Vector2(-2.15, 2.15)
texture = ExtResource("2_6cg4j")

[node name="Hitbox" parent="Node2D" instance=ExtResource("3_t72gn")]
position = Vector2(0, -1.90735e-06)
scale = Vector2(0.585912, 0.544246)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Hitbox"]
position = Vector2(102.404, 5.51222)
shape = SubResource("RectangleShape2D_4y2ou")
disabled = true
debug_color = Color(0.998824, 0.0271898, 0, 0.42)

[node name="RayCast2D" type="RayCast2D" parent="Node2D"]
position = Vector2(70, 0)
rotation = -1.5708
target_position = Vector2(0, 75)
collision_mask = 2

[node name="Beetle Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ipb8m")

[node name="Label" type="Label" parent="."]
offset_left = -85.0
offset_top = -50.0
offset_right = 12.0
offset_bottom = -36.0
theme_override_font_sizes/font_size = 10

[node name="Label2" type="Label" parent="."]
offset_left = -85.0
offset_top = -62.0
offset_right = 12.0
offset_bottom = -48.0
theme_override_font_sizes/font_size = 10

[node name="Reaction Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Attack Timer" type="Timer" parent="."]
one_shot = true

[node name="Attack Cooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Reaction Timer" to="." method="_on_reaction_timer_timeout"]
[connection signal="timeout" from="Attack Timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Attack Cooldown" to="." method="_on_attack_cooldown_timeout"]
